--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ngx-perfect-scrollbar": "7.0.0",
     "ngx-spinner": "6.1.2",
     "ngx-swiper-wrapper": "7.0.0",
+    "npm": "^6.4.1",
     "rxjs": "6.3.3",
     "rxjs-compat": "6.3.3",
     "zone.js": "0.8.26"
